# pyrex

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ops.yaml  pyproject.toml  tox.ini
src/pyrex/: __init__.py  __main__.py  __source__.py
